@@ -1,646 +1,521 @@
-# NemakiWare Multi-Agent Collaboration Guide
+# NemakiWare エージェント間連携ガイド
 
-**Last Updated**: 2025-11-01
-**Target Audience**: All AI agents (Claude Code, Devin, Cursor, Copilot, etc.)
-**Purpose**: Enable smooth test delegation and collaborative development
-**Current Branch**: feature/react-ui-playwright
-
----
-
-## 📋 Quick Start for New Agents
-
-### Environment Prerequisites
-
-```bash
-# 1. Java 17 (MANDATORY for all Maven/TCK operations)
-java -version
-# Expected: openjdk version "17.0.x"
-
-# Set Java 17 (adjust path to your environment)
-export JAVA_HOME=/path/to/java-17
-export PATH=$JAVA_HOME/bin:$PATH
-
-# 2. Node.js 18+ (for Playwright UI tests)
-node -v
-# Expected: v18.x or later
-
-# 3. Docker & Docker Compose
-docker --version
-docker compose version
-
-# 4. Playwright browsers (for UI tests)
-npx playwright --version
-# If not installed: npx playwright install
-```
-
-### First-Time Setup
-
-```bash
-# Navigate to project root
-cd /path/to/NemakiWare
-
-# Run QA tests to verify environment
-./qa-test.sh
-# Expected: Tests passed: 56 / 56 (100%)
-```
+**最終更新**: 2025-11-01
+**対象**: Claude Code、Devin、Cursor、その他のAIエージェント
+**目的**: エージェント間でスムーズにタスクを委譲できる体制を構築
 
 ---
 
-## 🏗️ Build and Deployment - CRITICAL PROCEDURES
+## 📌 このドキュメントの目的
 
-**⚠️ IMPORTANT**: Docker deployment issues are common. Always use the reliable deployment procedure.
-
-### Standard Build & Deploy Workflow
-
-```bash
-cd /path/to/NemakiWare
-
-# 1. Clean Maven build
-mvn clean package -f core/pom.xml -Pdevelopment -DskipTests -q
-
-# 2. Copy WAR to Docker directory (CRITICAL - must always do this)
-cp core/target/core.war docker/core/core.war
-
-# 3. Complete Docker rebuild (--build --force-recreate REQUIRED)
-cd docker
-docker compose -f docker-compose-simple.yml down --remove-orphans
-docker compose -f docker-compose-simple.yml up -d --build --force-recreate
-
-# 4. Wait for startup (minimum 90 seconds)
-sleep 90
-
-# 5. Verify deployment
-curl -u admin:admin http://localhost:8080/core/atom/bedroom
-# Expected: HTTP 200 with XML response
-```
-
-**Common Mistakes to Avoid**:
-- ❌ Using `docker compose restart` (doesn't rebuild Docker image)
-- ❌ Forgetting to copy WAR file to docker/core/
-- ❌ Not waiting for container startup
-- ✅ Always use `--build --force-recreate` flags
-- ✅ Always wait 90 seconds after `docker compose up`
-
-**Detailed Guide**: See `BUILD_DEPLOY_GUIDE.md` for complete procedures, troubleshooting, and git worktree considerations.
+CLAUDE.mdはClaude Code固有の技術詳細を記録していますが、このAGENTS.mdは**全てのAIエージェント**が参照できる汎用的なガイドです。特に**テストの委譲**をスムーズにすることを重視しています。
 
 ---
 
-## 🧪 Test Execution Guide
+## 🤝 エージェント別の推奨タスク
 
-### Test Execution Priority
+### Claude Code
+**得意分野**: Javaバックエンド、CMIS仕様、アーキテクチャ設計、ドキュメント整備
+**推奨タスク**:
+- CMISサービス層の実装・修正
+- TCK準拠テストの修正・デバッグ
+- データベース層の最適化
+- 技術ドキュメントの整備
 
-**Recommended Testing Order**:
-1. QA Integration Tests (2-3 minutes) - Verify system health
-2. TCK Compliance Tests (5-60 minutes per group) - Verify CMIS compliance
-3. Playwright UI Tests (10-20 minutes) - Verify UI functionality
+### Devin
+**得意分野**: UIテスト、E2Eテスト、フロントエンド実装、並列タスク実行
+**推奨タスク**:
+- **Playwrightテストの作成・修正**（最適）
+- React UIコンポーネントの実装
+- UI/UXの改善
+- テストカバレッジの向上
 
-### 1. QA Integration Tests (First Step Recommended)
-
-**Purpose**: Comprehensive system health check
-**Execution Time**: 2-3 minutes
-**Expected Result**: 56/56 tests PASS
-
-```bash
-cd /path/to/NemakiWare
-./qa-test.sh
-
-# Expected output:
-# Tests passed: 56 / 56
-# 🎉 全テスト合格！NemakiWareは正常に動作しています。
+**Devinへの委譲例**:
+```markdown
+タスク: Playwrightスキップテストの解除
+範囲: tests/admin/custom-type-creation.spec.ts
+前提条件: カスタムタイプ作成UIが実装済み
+期待成果: test.describe.skip → test.describe に変更し、全テスト通過
 ```
 
-**Test Coverage**:
-- CMIS endpoints (AtomPub, Browser Binding, Web Services)
-- Database initialization and patch system
-- Document/Folder CRUD operations
-- Versioning, ACL, Query system
-- Authentication and security
+### Cursor
+**得意分野**: コード編集、リファクタリング、インタラクティブな修正
+**推奨タスク**:
+- 既存コードのリファクタリング
+- バグ修正
+- TypeScript型定義の改善
+- 単体テストの作成
 
-### 2. TCK Compliance Tests (CMIS 1.1 Specification)
+### その他のエージェント
+**汎用的なタスク**:
+- ドキュメント整備
+- 設定ファイルの修正
+- QAテストの実行とレポート作成
 
-**Purpose**: CMIS 1.1 specification compliance verification
-**Execution Time**: 5-60 minutes per test group
-**Expected Result**: 39/39 tests PASS for implemented features
+---
 
-**⚠️ CRITICAL**: Always use `tck-test-clean.sh` to prevent database bloat issues.
+## 🧪 テスト委譲のプロセス
+
+### ステップ1: 委譲前の準備（委譲元エージェント）
 
 ```bash
-# Run all TCK tests with automatic database cleanup
-./tck-test-clean.sh
+# 1. 環境の健全性確認
+docker ps                       # 全コンテナ起動確認
+./qa-test.sh                    # QAテスト全通過確認（56/56）
+git status                      # クリーンな状態確認
 
-# Run specific test group
-./tck-test-clean.sh QueryTestGroup
+# 2. ベースライン結果の記録
+cd core/src/main/webapp/ui
+npx playwright test > baseline_results.txt
+# 現在の通過率を記録
 
-# Run specific test method
-./tck-test-clean.sh QueryTestGroup#queryLikeTest
+# 3. 委譲内容をHANDOFF.mdに記載
 ```
 
-**Test Groups and Expected Results**:
+**委譲内容の明確化**:
+- [ ] 何をテストするのか（例: カスタムタイプ作成機能）
+- [ ] どのファイルが対象か（例: tests/admin/custom-type-creation.spec.ts）
+- [ ] 前提条件は何か（例: UIが実装済み、スキップを解除）
+- [ ] 期待される成果物（例: テスト通過率の向上、バグレポート）
 
-| Group | Tests | Time | Status | Notes |
-|-------|-------|------|--------|-------|
-| BasicsTestGroup | 3 | ~40s | ✅ PASS | Repository info, root folder, security |
-| TypesTestGroup | 3 | ~3m | ✅ PASS | Type definitions, base types |
-| ControlTestGroup | 1 | ~25s | ✅ PASS | ACL operations |
-| VersioningTestGroup | 4 | ~6m | ✅ PASS | Versioning operations |
-| ConnectionTestGroup | 2 | ~1s | ✅ PASS | Connection handling |
-| InheritedFlagTest | 1 | ~1s | ✅ PASS | Property inheritance |
-| QueryTestGroup | 6 | ~8m | ✅ PASS | CMIS SQL queries |
-| CrudTestGroup1 | 10 | ~33m | ✅ PASS | CRUD operations (part 1) |
-| CrudTestGroup2 | 9 | ~14m | ✅ PASS | CRUD operations (part 2) |
-| **FilingTestGroup** | 3 | - | ⊘ SKIP | Multi-filing (product specification) |
-
-**Total**: 39/39 PASS (100% for implemented features)
-
-**Manual Execution** (if tck-test-clean.sh unavailable):
-```bash
-export JAVA_HOME=/path/to/java-17
-timeout 600s mvn test -Dtest=BasicsTestGroup -f core/pom.xml -Pdevelopment
-```
-
-### 3. Playwright UI Tests
-
-**Purpose**: End-to-end browser testing of React UI
-**Execution Time**: 10-20 minutes (all browsers)
-**Test Count**: 81 specs × 6 browser profiles = 486 total executions
+### ステップ2: テスト実行（委譲先エージェント）
 
 ```bash
-cd /path/to/NemakiWare/core/src/main/webapp/ui
+# 1. 環境セットアップ確認
+docker ps                       # コンテナ起動確認
+curl -u admin:admin http://localhost:8080/core/atom/bedroom  # サービス確認
+cd core/src/main/webapp/ui
+npx playwright --version        # Playwrightインストール確認
 
-# Install dependencies (first time only)
-npm install
-
-# Run all tests (all browsers)
-npx playwright test
-
-# Run specific test file
-npx playwright test tests/admin/initial-content-setup.spec.ts
-
-# Run with specific browser
+# 2. ベースラインテスト実行（委譲前の状態確認）
 npx playwright test --project=chromium
 
-# Run with headed browser (debugging)
-npx playwright test --headed --project=chromium
+# 3. タスク実行（例: スキップ解除）
+# ファイルを編集してtest.describe.skip → test.describe
+
+# 4. テスト再実行
+npx playwright test tests/admin/custom-type-creation.spec.ts --project=chromium
+
+# 5. 結果の記録
+npx playwright show-report
+```
+
+### ステップ3: 成果物の記録（委譲先エージェント）
+
+```bash
+# 1. 変更のコミット
+git add tests/admin/custom-type-creation.spec.ts
+git commit -m "test: Enable custom type creation tests"
+
+# 2. HANDOFF.mdの更新
+# - 実行したテスト
+# - 通過/失敗の詳細
+# - 発見したバグ
+# - 次のステップの提案
+
+# 3. プッシュ
+git push origin <branch-name>
+```
+
+---
+
+## ✅ テスト委譲チェックリスト
+
+### 委譲元エージェント（Claude Code等）
+
+**環境準備**:
+- [ ] Dockerコンテナ全て起動済み（`docker ps`で確認）
+- [ ] QAテスト全通過（`./qa-test.sh` → 56/56）
+- [ ] Gitブランチがクリーン（`git status`）
+- [ ] 最新のコミットがプッシュ済み
+
+**委譲内容の明確化**:
+- [ ] HANDOFF.mdに委譲内容を記載
+- [ ] 対象ファイル/機能を特定
+- [ ] 前提条件を明記（例: UI実装済み）
+- [ ] 期待成果を定義（例: テスト通過、バグレポート）
+
+### 委譲先エージェント（Devin、Cursor等）
+
+**環境セットアップ**:
+- [ ] Java 17確認（TCKテストの場合のみ）
+- [ ] Node.js 18+確認（Playwrightテストの場合）
+- [ ] Playwrightブラウザインストール済み（`npx playwright install`）
+- [ ] Dockerコンテナ起動確認
+
+**テスト実行前**:
+- [ ] HANDOFF.mdを読んで委譲内容を理解
+- [ ] BUILD_DEPLOY_GUIDE.mdでビルド手順を確認
+- [ ] ベースラインテスト実行（委譲前の状態確認）
+
+**テスト実行後**:
+- [ ] テスト結果の記録（通過/失敗の詳細）
+- [ ] バグを発見した場合は詳細をレポート
+- [ ] 変更のコミット・プッシュ
+- [ ] HANDOFF.mdを更新（次のエージェントへ）
+
+---
+
+# Repository Guidelines
+
+## Project Structure & Modules
+- `common/` — Shared utilities (JAR).
+- `core/` — CMIS REST/Web Services server (WAR, Jakarta EE 10, Spring 6).
+  - `core/src/main/webapp/ui/` — React SPA UI (Vite + TypeScript + Ant Design)
+  - `core/src/main/webapp/ui/tests/` — Playwright E2E tests
+- `solr/` — Search integration helpers.
+- `cloudant-init/` — CouchDB/Cloudant bootstrap tools.
+- `docker/` — Compose files, images, and runtime config.
+- `setup/`, `war_content/`, `WEB-INF/` — Installer and packaging assets.
+- Tests live under `*/src/test/java`; reports under `*/test-reports/`.
+
+## Build, Test, and Run
+
+### Backend Build
+- Build all modules: `mvn -T 1C -DskipTests install` (root `pom.xml`).
+- Build server only: `mvn -pl core -am package` (produces `core/target/core.war`).
+- Run dev server (Jetty 11): `cd core && ./start-jetty-dev.sh`.
+  - Access CMIS: `http://localhost:8080/core/atom/bedroom` (admin:admin).
+- Run tests (JUnit 4): `mvn test` or `mvn -pl core test`.
+
+### React UI Build and Deployment
+
+**Important**: React UI must be built and deployed to WAR file for production use.
+
+```bash
+# 1. Build React UI (from UI directory)
+cd core/src/main/webapp/ui
+npm install  # First time only
+npm run build
+
+# 2. Build core WAR with UI assets
+cd /path/to/NemakiWare
+mvn clean package -f core/pom.xml -Pdevelopment -DskipTests
+
+# 3. Copy WAR to Docker directory
+cp core/target/core.war docker/core/core.war
+
+# 4. Deploy via Docker
+cd docker
+docker compose -f docker-compose-simple.yml down
+docker compose -f docker-compose-simple.yml up -d --build --force-recreate
+
+# 5. Wait for startup (約90秒)
+sleep 90
+
+# 6. Verify UI is accessible
+curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/core/ui/dist/index.html
+# Expected: 200
+```
+
+### Docker Environment
+- Full stack via Docker: `docker compose -f docker/docker-compose-simple.yml up -d`.
+- Services: CouchDB (5984), Solr (8983), Tomcat Core (8080)
+- Check status: `docker compose -f docker/docker-compose-simple.yml ps`
+- View logs: `docker compose -f docker/docker-compose-simple.yml logs core`
+
+### Playwright UI Tests
+
+**Latest Test Results** (2025-11-09):
+- **Core Tests**: 25/25 PASS (100%) ✅
+  - Basic Connectivity: 4/4 PASS
+  - Authentication: 7/7 PASS
+  - Document Management: 9/9 PASS
+  - Initial Content Setup: 5/5 PASS
+- **Known Issues**: Group management timeout, custom type UI not implemented
+- See "Playwright UI Test Status (2025-11-09)" section below for details
+
+**Running Tests**:
+```bash
+# Core tests (recommended for smoke testing)
+cd core/src/main/webapp/ui
+npx playwright test tests/basic-connectivity.spec.ts --project=chromium --workers=1
+npx playwright test tests/auth/login.spec.ts --project=chromium --workers=1
+npx playwright test tests/documents/document-management.spec.ts --project=chromium --workers=1
+
+# All tests (may include long-running or skipped tests)
+npx playwright test --project=chromium --workers=1
+
+# Specific test file
+npx playwright test tests/versioning/document-versioning.spec.ts --project=chromium --workers=1
+
+# Debug mode (with browser UI)
+npx playwright test --project=chromium --debug
 
 # Generate HTML report
 npx playwright show-report
 ```
 
-**Browser Profiles** (6 total):
-- chromium (desktop)
-- firefox
-- webkit (desktop)
-- Mobile Chrome
-- Mobile Safari
-- Tablet
+**Test Environment Requirements**:
+- Docker containers must be running (see Docker Environment section)
+- Server must be healthy: `http://localhost:8080/core/ui/dist/index.html` returns 200
+- Recommended: Single worker (`--workers=1`) to avoid race conditions
 
-**Current Test Status** (2025-11-01):
-- Expected to improve with Browser Binding "root" translation fix
-- See CLAUDE.md for detailed Playwright test analysis
+## Coding Style & Naming
+- Java 17; use Jakarta APIs (`jakarta.*`), avoid `javax.*`.
+- Indentation: 4 spaces, UTF-8, 120-col soft wrap.
+- Packages: `jp.aegif.nemaki...`; Classes `PascalCase`, methods/fields `camelCase`, constants `UPPER_SNAKE_CASE`.
+- Prefer SLF4J (`org.slf4j.Logger`) over `System.out`.
+- Module boundaries: put shared code in `common/`; CMIS/server code in `core/`.
+- React/TypeScript: Follow standard TypeScript/React conventions, use functional components with hooks.
 
----
+## Testing Guidelines
 
-## 📂 Repository Structure
+### JUnit Tests (Backend)
+- Framework: JUnit 4 (Surefire configured with Java 17 module opens).
+- Place tests in `src/test/java`; name files `*Test.java`.
+- Keep unit tests fast and isolated (mock Solr when applicable).
+- Useful scripts: `qa-test.sh`, `test-rest-api-comprehensive.sh`.
 
+### Playwright Tests (UI)
+- Framework: Playwright (TypeScript)
+- Test files: `core/src/main/webapp/ui/tests/**/*.spec.ts`
+- Test helpers: `tests/utils/auth-helper.ts`, `tests/utils/test-helper.ts`
+- Configuration: `playwright.config.ts`
+
+**Key Test Helpers**:
+- `AuthHelper`: Login/logout, session management
+- `TestHelper`: Ant Design element waiting, common UI interactions
+- `uploadDocument()`: Document upload with retry logic
+
+**Important Fixes Applied** (Historical):
+1. ✅ AtomPub parser: Now extracts ALL CMIS properties (not just hardcoded 8)
+2. ✅ Cache invalidation: checkout/cancelCheckout operations
+3. ✅ deleteTree operation: Browser Binding support added
+4. ✅ Versioning: cmis:document.versionable=true
+5. ✅ Advanced Search: CMIS Browser Binding query syntax
+
+**Current Known Issues**: See "Playwright UI Test Status (2025-11-09)" section for latest test results and known issues
+
+## Commit & Pull Request Guidelines
+- Use concise, imperative subjects. Conventional prefixes are common: `feat:`, `fix:`, `refactor:`, `chore:` (optionally add module tag, e.g., `[core] fix: ...`).
+- Include context and rationale in the body; reference issues (`Fixes #123`).
+- PRs should include: clear description, reproduction steps, test evidence (logs or report paths), config notes (e.g., CouchDB, ports), and any Docker compose variant used.
+
+## Security & Configuration Tips
+- Do not commit secrets. Local defaults: CouchDB `admin/password` (dev only).
+- Primary config: `core/nemakiware.properties`, `docker/repositories.yml`.
+- For Java 17, ensure `MAVEN_OPTS` includes required `--add-opens` (see `core/start-jetty-dev.sh`).
+
+## Current Work Status (2025-11-09)
+
+### Active Branch
+- **Branch**: `vk/368c-tck`
+- **Focus**: TCK test complete success - All 39/39 implemented CMIS features passing
+
+### TCK Complete Success Achievement (2025-11-09) 🎉
+
+**Status**: ✅ **39/39 Tests PASS (100% of implemented features)**
+**TCK Compliance**: 92.9% (39/42 tests, 3 skipped for unimplemented multi-filing feature)
+
+| Test Group | Tests | Status | Time |
+|------------|-------|--------|------|
+| BasicsTestGroup | 3/3 | ✅ PASS | 24.9s |
+| ConnectionTestGroup | 2/2 | ✅ PASS | 1.4s |
+| TypesTestGroup | 3/3 | ✅ PASS | 172.0s |
+| ControlTestGroup | 1/1 | ✅ PASS | 30.4s |
+| VersioningTestGroup | 4/4 | ✅ PASS | 358.1s |
+| InheritedFlagTest | 1/1 | ✅ PASS | 1.2s |
+| QueryTestGroup | 6/6 | ✅ PASS | Various |
+| CrudTestGroup1 | 10/10 | ✅ PASS | 35m 2s |
+| CrudTestGroup2 | 9/9 | ✅ PASS | 14m 57s |
+| FilingTestGroup | 0/3 | ⊘ SKIP | - |
+
+**Total**: 39 tests PASS, 0 FAIL, 3 SKIP (intentional)
+
+### Critical Fix: queryRootFolderTest (2025-11-09)
+
+**Problem**: WHERE clause queries with explicit SELECT + aliases were missing selected properties
+
+**Example Query**:
+```sql
+SELECT cmis:name AS folderName, cmis:objectId AS folderId
+FROM cmis:folder
+WHERE cmis:creationDate > TIMESTAMP '2012-12-31T23:00:00.000Z'
 ```
-NemakiWare/
-├── core/                           # Main CMIS repository server
-│   ├── src/main/java/             # Java source code
-│   │   └── jp/aegif/nemaki/       # Main package
-│   ├── src/main/webapp/ui/        # React UI
-│   │   ├── src/                   # React components
-│   │   ├── tests/                 # Playwright tests
-│   │   └── dist/                  # Built UI assets
-│   └── pom.xml                    # Maven build config
-├── docker/                         # Docker deployment
-│   ├── docker-compose-simple.yml  # 3-container setup (recommended)
-│   └── core/core.war              # Deployment WAR file
-├── lib/                            # Self-build dependencies
-│   ├── built-jars/                # Unified JAR management
-│   └── nemaki-opencmis-1.1.0-jakarta/ # Jakarta EE OpenCMIS source
-├── qa-test.sh                     # QA integration tests (56 tests)
-├── tck-test-clean.sh              # TCK tests with database cleanup
-├── BUILD_DEPLOY_GUIDE.md          # Comprehensive build procedures
-├── HANDOFF.md                     # Quick agent handoff reference
-├── CLAUDE.md                      # Detailed project history (Claude Code-specific)
-└── AGENTS.md                      # This file (agent-agnostic)
-```
+❌ **Before**: Only returned objectTypeId, baseTypeId (required properties)
+✅ **After**: Returns folderName, folderId, objectTypeId, baseTypeId (all expected)
 
----
+**Root Cause**: WAR file corruption/stale class files preventing Spring Bean initialization
 
-## 🔑 Authentication and Endpoints
-
-### Default Credentials
-- **NemakiWare Admin**: `admin:admin`
-- **CouchDB**: `admin:password` (CouchDB 3.x requires authentication)
-
-### Key Endpoints
-
+**Solution**: Clean build + proper Docker deployment
 ```bash
-# CMIS AtomPub Binding
-curl -u admin:admin http://localhost:8080/core/atom/bedroom
+# 1. Stop containers
+docker compose -f docker/docker-compose-simple.yml down
 
-# CMIS Browser Binding (JSON)
-curl -u admin:admin "http://localhost:8080/core/browser/bedroom/root?cmisselector=children"
+# 2. Clean build
+mvn clean package -f core/pom.xml -Pdevelopment -DskipTests
 
-# React UI
-http://localhost:8080/core/ui/
-
-# CouchDB
-curl -u admin:password http://localhost:5984/_all_dbs
-# Expected: ["bedroom","bedroom_closet","canopy","canopy_closet","nemaki_conf"]
-
-# Solr
-curl http://localhost:8983/solr/admin/cores?action=STATUS
-```
-
-### Repository IDs
-- **bedroom**: Primary repository (use for all testing)
-- **canopy**: Multi-repository management
-- **bedroom_closet**: Archive repository for bedroom
-- **canopy_closet**: Archive repository for canopy
-
----
-
-## 🐛 Common Issues and Solutions
-
-### Issue 1: "Code changes not reflecting in Docker container"
-
-**Symptom**: Modifications don't appear after rebuild
-
-**Diagnosis**:
-```bash
-# Check if you're building from correct location
-pwd
-git rev-parse --show-toplevel
-
-# Check WAR file timestamp
-ls -lh docker/core/core.war
-
-# Check container class file timestamp
-docker exec docker-core-1 ls -lh /usr/local/tomcat/webapps/core/WEB-INF/classes/jp/aegif/nemaki/cmis/servlet/
-```
-
-**Solution**:
-```bash
-# Wrong approach: docker compose restart (doesn't rebuild image)
-# Correct approach:
-cd /path/to/NemakiWare
-mvn clean package -f core/pom.xml -Pdevelopment -DskipTests -q
+# 3. Copy WAR (verify 118MB size)
 cp core/target/core.war docker/core/core.war
-cd docker && docker compose -f docker-compose-simple.yml up -d --build --force-recreate core
+
+# 4. Force recreate containers
+docker compose -f docker/docker-compose-simple.yml up -d --build --force-recreate
+
+# 5. Wait for initialization
 sleep 90
 ```
 
-### Issue 2: "Tests failing with connection errors"
+### Lessons Learned: Debugging Failed Approaches ⚠️
 
-**Symptom**: Timeout, ECONNREFUSED, or connection refused errors
+**What NOT to Do When Debugging**:
 
-**Diagnosis**:
+1. ❌ **Adding System.err.println() to production code**
+   - **Problem**: Caused Spring BeanCreationException
+   - **Error**: `ClassNotFoundException: org.apache.chemistry.opencmis.commons.data.ObjectInFolderData`
+   - **Lesson**: Even simple debug statements can break Spring class loading
+   - **Better Approach**: Use existing JSON logs or remote debugger
+
+2. ❌ **Changing logback.xml without verifying output**
+   - **Problem**: DEBUG level set but no output appeared
+   - **Issue**: Logger may not be initialized or output suppressed
+   - **Lesson**: Always verify logging changes produce expected output
+
+3. ❌ **Incremental rebuilds without clean**
+   - **Problem**: Stale class files cause unpredictable behavior
+   - **Lesson**: Always use `mvn clean` for critical fixes
+
+**What DOES Work** ✅:
+
+1. ✅ **Clean build + force recreate deployment**
+   - Most reliable way to eliminate build artifacts issues
+   - Guarantees consistent state
+
+2. ✅ **Analyze existing Docker JSON logs**
+   - CMIS operations already produce detailed JSON logs
+   - No code modifications needed
+
+3. ✅ **Use tck-test-clean.sh for TCK tests**
+   - Prevents database bloat issues
+   - Provides consistent test environment
+
+### Regression Prevention Guidelines
+
+**Before Making Changes**:
+1. Record current test status (QA: 56/56, TCK: 39/39)
+2. Create git branch for changes
+3. Document expected behavior
+
+**After Making Changes**:
+1. Clean build: `mvn clean package`
+2. Force recreate: `docker compose down && up -d --build --force-recreate`
+3. Verify QA tests: `./qa-test.sh` (should show 56/56)
+4. Verify affected TCK tests
+5. Commit with detailed description
+
+**When Debugging**:
+- Prefer analyzing existing logs over adding debug code
+- If adding debug code is necessary, test in isolated environment first
+- Always revert debug code before committing
+- Document what was tried and why it failed
+
+### Playwright UI Test Status (2025-11-09) ✅
+
+**Core Test Results** - All passing, no regressions from TCK work:
+
+| Test Suite | Result | Time | Details |
+|------------|--------|------|---------|
+| **Basic Connectivity** | ✅ 4/4 PASS | 6.3s | UI load, backend, assets, React init |
+| **Authentication** | ✅ 7/7 PASS | 23.8s | Login/logout, session, permissions |
+| **Document Management** | ✅ 9/9 PASS | 2m 0s | List, upload, delete, download |
+| **Initial Content Setup** | ✅ 5/5 PASS | 1.9s | Folder creation, ACL validation |
+
+**Total**: 25/25 PASS (100%) ✅
+
+**Verified Functionality**:
+- ✅ React app initialization and Ant Design rendering
+- ✅ User authentication and session management
+- ✅ CMIS Browser Binding integration (document CRUD)
+- ✅ ACL permission management (multi-principal support)
+- ✅ Folder hierarchy navigation
+
+**Known Issues** (Timeouts/UI Not Implemented):
+
+1. **group-management-crud.spec.ts** - Timeout (40+ seconds)
+   - Test 1 (create group): Timeout waiting for group creation UI response
+   - Tests 2-5: Skipped due to test 1 dependency
+   - **Root Cause**: Group creation UI may not be implemented or extremely slow
+   - **Status**: Requires UI team investigation
+
+2. **custom-type-creation.spec.ts** - Partially Skipped
+   - Test 1 (create custom type): ✅ PASS (17.2s)
+   - Tests 2-3 (add properties, create document): ⊘ SKIP (UI elements not found)
+   - **Root Cause**: Property definition tab and type selector not implemented in UI
+   - **Status**: Marked as WIP in test file
+
+3. **type-definition-upload.spec.ts** - Partially Failing
+   - Test 1 (valid upload): ✅ PASS (14.3s)
+   - Test 2 (conflict detection): ✅ PASS (11.9s)
+   - Test 3 (JSON edit): ❌ FAIL (40.3s) - JSON edit modal timeout
+   - **Root Cause**: JSON edit modal selector may have changed
+   - **Status**: Requires investigation
+
+**Impact Assessment**:
+- ✅ **No TCK Regressions**: All core CMIS functionality unaffected by TCK fixes
+- ✅ **No Core UI Regressions**: Essential UI features (auth, documents, ACL) working
+- ⚠️ **Admin UI Issues**: Group management and type management UI require attention
+
+### Next Steps
+
+1. **High Priority - TCK Maintenance**:
+   - Monitor for regressions using `./qa-test.sh` (56/56) and TCK tests
+   - Keep database clean for reliable test execution (`tck-test-clean.sh`)
+   - Document any new CMIS features with corresponding TCK tests
+
+2. **Medium Priority - Playwright UI Tests**:
+   - ✅ **COMPLETED**: Verified core UI tests (25/25 PASS)
+   - ⚠️ Investigate group-management-crud timeout (UI implementation issue)
+   - ⚠️ Review custom-type-creation skipped tests (property tab UI missing)
+   - ⚠️ Fix type-definition-upload JSON edit modal selector
+
+3. **Low Priority**:
+   - Implement missing UI features (Group Management CRUD, Custom Type Properties)
+   - Complete PDF Preview functionality
+   - Improve CI/CD timeout handling
+
+### Reference Documents
+- **HANDOFF-DOCUMENT.md**: Detailed session handoff with technical findings
+- **PLAYWRIGHT-TEST-PROGRESS.md**: Test progress tracking
+- **CLAUDE.md**: Comprehensive project documentation and history
+
+### Quick Troubleshooting
+
+**Docker not running**:
 ```bash
-# Check container status
+# Check Docker daemon status
 docker ps
-# Expected: 3 containers (docker-core-1, docker-couchdb-1, docker-solr-1)
 
-# Check container health
-docker ps | grep "(healthy)"
+# If not running, start Docker Desktop (macOS) or systemctl (Linux)
+# Then restart containers
+cd docker && docker compose -f docker-compose-simple.yml up -d
 ```
 
-**Solution**:
+**UI not accessible**:
 ```bash
-# Restart containers if unhealthy
-cd docker
-docker compose -f docker-compose-simple.yml restart
+# Verify core container is running
+docker compose -f docker/docker-compose-simple.yml ps
+
+# Check core logs
+docker compose -f docker/docker-compose-simple.yml logs core
+
+# Restart if needed
+docker compose -f docker/docker-compose-simple.yml restart core
 sleep 90
-
-# Check logs for errors
-docker logs docker-core-1 --tail 50
-docker logs docker-couchdb-1 --tail 50
-docker logs docker-solr-1 --tail 50
 ```
 
-### Issue 3: "TCK tests timing out or hanging"
+**Tests failing with timeout**:
+- Check server is responding: `curl http://localhost:8080/core/ui/dist/index.html`
+- Increase timeout in `playwright.config.ts`: `timeout: 60000`
+- Use `--workers=1` to avoid race conditions
+- Check Docker container logs for errors
 
-**Symptom**: Tests hang after 2 minutes or never complete
-
-**Diagnosis**:
+**Build issues**:
 ```bash
-# Check database document count (clean state: 116 documents)
-curl -s -u admin:password http://localhost:5984/bedroom | jq '.doc_count'
-# If >500 documents: Database bloat causing performance issues
-```
-
-**Solution**:
-```bash
-# Always use tck-test-clean.sh (automatic database cleanup)
-./tck-test-clean.sh TestGroupName
-
-# Manual cleanup if script unavailable:
-curl -X DELETE -u admin:password http://localhost:5984/bedroom
-cd docker && docker compose -f docker-compose-simple.yml restart core
-sleep 90
-
-# Verify clean state
-curl -s -u admin:password http://localhost:5984/bedroom | jq '.doc_count'
-# Expected: ~116 documents
-```
-
-### Issue 4: "Playwright tests failing with browser not found"
-
-**Symptom**: "Executable doesn't exist" or browser installation errors
-
-**Solution**:
-```bash
-# Install Playwright browsers on host machine
-npx playwright install
-
-# Verify installation
-npx playwright --version
-
-# List installed browsers
-npx playwright install --help
-```
-
-### Issue 5: "UI not accessible - HTTP 404"
-
-**Symptom**: http://localhost:8080/core/ui/ returns 404
-
-**Diagnosis**:
-```bash
-# Check if UI assets are in WAR file
-unzip -l core/target/core.war | grep "ui/dist/index.html"
-
-# Check container UI files
-docker exec docker-core-1 ls -la /usr/local/tomcat/webapps/core/ui/dist/
-```
-
-**Solution**:
-```bash
-# Rebuild UI and WAR
-cd core/src/main/webapp/ui
-npm run build
-
+# Clean rebuild
+cd core/src/main/webapp/ui && npm run build
 cd /path/to/NemakiWare
 mvn clean package -f core/pom.xml -Pdevelopment -DskipTests
-cp core/target/core.war docker/core/core.war
-cd docker && docker compose -f docker-compose-simple.yml up -d --build --force-recreate
-sleep 90
+
+# Verify WAR file size (should be ~300MB)
+ls -lh core/target/core.war
 ```
-
----
-
-## 🎯 Current Status (2025-11-01)
-
-### Recent Achievements ✅
-- **Browser Binding Fix**: "root" marker translation working (commit 91384ee48)
-- **TCK Compliance**: 39/39 tests PASS (100% for implemented features)
-- **QA Integration**: 56/56 tests PASS (100%)
-- **Documentation**: BUILD_DEPLOY_GUIDE.md, HANDOFF.md created
-- **Branch Integration**: vk/368c-tck merged into feature/react-ui-playwright
-
-### Current Focus ⏳
-- Organizing Playwright skipped tests
-- Creating UI implementation plan for missing features
-- Continuing Playwright test-based improvements
-
-### Known Playwright Test Skips 📋
-
-**UI Features Not Implemented** (14 tests total):
-1. **Custom Type Creation** (4 tests skipped in custom-type-creation.spec.ts)
-   - UI for creating custom types doesn't exist yet
-   - Backend type creation API exists (TypeResource.java)
-
-2. **Versioning UI** (5 tests skipped in document-versioning.spec.ts)
-   - Check-out button not implemented
-   - Check-in button not implemented
-   - Cancel check-out button not implemented
-   - Version history button not implemented
-
-3. **PDF Preview** (2 tests skipped in pdf-preview.spec.ts)
-   - PDF rendering functionality incomplete
-   - Viewer integration pending
-
-4. **Permission Management** (3 tests skipped in access-control.spec.ts)
-   - Test user creation UI not available
-   - ACL assignment UI needs improvement
-
-**Test Issues** (different from UI not implemented):
-- Access Control tests: Test user timeout issues
-- Document Viewer: Navigation/auth issues
-
-**Total Skipped**: ~30 tests (out of ~103 total Playwright tests)
-
-### Next Steps for UI Implementation 📌
-
-**High Priority** (Core CMIS Functionality):
-1. Versioning UI buttons (check-out, check-in, cancel, version history)
-2. Permission management improvements (ACL UI)
-
-**Medium Priority** (Enhanced Functionality):
-3. Custom type creation UI
-4. User/Group management CRUD UI
-5. PDF preview completion
-
-**Low Priority** (Nice to Have):
-6. Advanced search UI improvements
-7. Bulk operations UI
-8. Workflow integration UI
-
----
-
-## 🤝 Agent Collaboration Workflow
-
-### Scenario 1: Delegating Test Execution
-
-**Current Agent** (handoff preparation):
-```bash
-# 1. Ensure clean environment
-docker ps  # Verify 3 containers running
-./qa-test.sh  # Verify 56/56 tests pass
-
-# 2. Document current state
-cd core/src/main/webapp/ui
-npx playwright test --list > playwright-tests-list.txt
-
-# 3. Create handoff note
-echo "Environment verified. QA: 56/56 PASS. Playwright test list in playwright-tests-list.txt" > handoff-status.txt
-```
-
-**Receiving Agent** (execution):
-```bash
-# 1. Verify prerequisites
-java -version  # Java 17
-node -v        # Node.js 18+
-docker ps      # 3 containers
-npx playwright --version  # Browsers installed
-
-# 2. Verify environment
-./qa-test.sh  # Should show 56/56
-
-# 3. Execute delegated tests
-cd core/src/main/webapp/ui
-npx playwright test
-
-# 4. Report results
-npx playwright show-report
-```
-
-### Scenario 2: Delegating Code Changes
-
-**Current Agent** (before handoff):
-```bash
-# 1. Commit and push current work
-git add -A
-git commit -m "work: [description of current state]"
-git push origin [branch-name]
-
-# 2. Document in HANDOFF.md or create handoff note
-echo "Last commit: [hash]. Current work: [description]. Next step: [task]" > handoff-note.txt
-
-# 3. Ensure build works
-mvn clean package -f core/pom.xml -Pdevelopment -DskipTests
-./qa-test.sh
-```
-
-**Receiving Agent** (continuation):
-```bash
-# 1. Pull latest changes
-git pull origin [branch-name]
-
-# 2. Verify build
-mvn clean package -f core/pom.xml -Pdevelopment -DskipTests
-./qa-test.sh
-
-# 3. Continue from documented next step
-```
-
----
-
-## 📚 Reference Documentation
-
-### Essential Reading
-- **BUILD_DEPLOY_GUIDE.md**: Complete build/deploy procedures, troubleshooting, Docker gotchas
-- **HANDOFF.md**: Quick reference for agent handoff (3 most important points)
-- **CLAUDE.md**: Comprehensive project history, technical decisions, known issues (Claude Code-specific)
-
-### CMIS API Reference
-See CLAUDE.md sections:
-- CMIS API Reference
-- Browser Binding usage (critical for file uploads)
-- AtomPub Binding usage
-
-### TCK Testing Details
-See CLAUDE.md sections:
-- TCK Test Execution (Standard Procedure)
-- TCK Test Results Summary
-- Database Cleanup Requirements
-
----
-
-## 🔧 Health Check Commands
-
-### Quick Environment Verification
-```bash
-# All-in-one health check
-docker ps && curl -s -u admin:admin http://localhost:8080/core/atom/bedroom -o /dev/null -w "CMIS: %{http_code}\n" && curl -s -u admin:password http://localhost:5984/_all_dbs -o /dev/null -w "CouchDB: %{http_code}\n" && ./qa-test.sh
-```
-
-### Individual Service Checks
-```bash
-# Docker containers
-docker ps
-# Expected: 3 containers running (docker-core-1, docker-couchdb-1, docker-solr-1)
-
-# CMIS endpoint
-curl -s -o /dev/null -w "%{http_code}" -u admin:admin http://localhost:8080/core/atom/bedroom
-# Expected: 200
-
-# CouchDB
-curl -s -o /dev/null -w "%{http_code}" -u admin:password http://localhost:5984/_all_dbs
-# Expected: 200
-
-# Solr
-curl -s -o /dev/null -w "%{http_code}" http://localhost:8983/solr/admin/cores?action=STATUS
-# Expected: 200
-
-# React UI
-curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/core/ui/
-# Expected: 200
-```
-
-### Database State Check
-```bash
-# Document count (clean state: 116 documents)
-curl -s -u admin:password http://localhost:5984/bedroom | jq '.doc_count'
-
-# Design documents
-curl -s -u admin:password "http://localhost:5984/bedroom/_design/_repo" | jq '.views | keys'
-
-# All databases
-curl -s -u admin:password http://localhost:5984/_all_dbs
-# Expected: ["bedroom","bedroom_closet","canopy","canopy_closet","nemaki_conf"]
-```
-
----
-
-## 📊 Test Execution Matrix
-
-| Test Type | Command | Time | Expected Result | When to Run |
-|-----------|---------|------|-----------------|-------------|
-| QA Integration | `./qa-test.sh` | 2-3 min | 56/56 PASS | First step, after any deploy |
-| TCK Basics | `./tck-test-clean.sh BasicsTestGroup` | ~40s | 3/3 PASS | After CMIS changes |
-| TCK Full | `./tck-test-clean.sh` | ~60 min | 39/39 PASS | Before PR, release |
-| Playwright Quick | `npx playwright test --project=chromium` | 3-5 min | Varies | After UI changes |
-| Playwright Full | `npx playwright test` | 10-20 min | Varies | Before PR, release |
-
----
-
-## 🚨 Emergency Procedures
-
-### Complete Environment Reset
-```bash
-cd /path/to/NemakiWare/docker
-
-# 1. Stop and remove all containers
-docker compose -f docker-compose-simple.yml down --remove-orphans
-
-# 2. Clean Docker cache
-docker system prune -f
-
-# 3. Rebuild from scratch
-cd ..
-mvn clean package -f core/pom.xml -Pdevelopment -DskipTests
-cp core/target/core.war docker/core/core.war
-cd docker
-docker compose -f docker-compose-simple.yml up -d --build --force-recreate
-
-# 4. Wait and verify
-sleep 90
-curl -u admin:admin http://localhost:8080/core/atom/bedroom
-```
-
-### Database Reset (TCK Testing)
-```bash
-# Delete contaminated database
-curl -X DELETE -u admin:password http://localhost:5984/bedroom
-
-# Restart core for automatic reinitialization
-cd docker
-docker compose -f docker-compose-simple.yml restart core
-sleep 90
-
-# Verify clean state
-curl -s -u admin:password http://localhost:5984/bedroom | jq '.doc_count'
-# Expected: 116 documents
-```
-
----
-
-**Version**: 2.0
-**Last Updated**: 2025-11-01
-**Branch**: feature/react-ui-playwright
-**Maintainer**: NemakiWare Development Team
-
-For detailed technical documentation, see CLAUDE.md.
-For quick handoff reference, see HANDOFF.md.
-For build/deploy procedures, see BUILD_DEPLOY_GUIDE.md.
